# francis-suite

./: .gitignore  README.md  pyproject.toml  resultados.txt  test_expr.py
docs/: architecture.md  nomenclatures.yaml  roadmap.md
docs/decisions/: ADR-001-execution-engine.md
examples/: books_all_pages.xml  books_scraper.xml  test_boolean.xml
francis_suite/: __init__.py  cli.py
francis_suite/core/: context.py  events.py  expressions.py  nodes.py  parser.py  registry.py  runtime.py  session.py  variables.py
francis_suite/hands/: base.py
francis_suite/hands/core/: __init__.py  box.py  box_def.py  build_list.py  call_workflow.py  case_.py  catch_.py  convert_html_to_xml.py  convert_json_to_xml.py  convert_xml_to_json.py  else_.py  empty.py  evaluate.py  exit_.py  file_download.py  file_manage.py  file_read.py  file_upload.py  file_write.py  function_call.py  function_create.py  function_param.py  function_return.py  http_call.py  httpx_call.py  if_.py  log.py  loop.py  loop_body.py  loop_list.py  regex.py  regex_input.py  regex_pattern.py  regex_result.py  regex_results.py  shared_box.py  shared_box_def.py  sleep.py  sleep_avg.py  sleep_max.py  (+6 more)
tests/: test_pipeline.py
