[project]
name = "francis-suite"
version = "0.1.0"
description = "Modern web scraping framework inspired by WebHarvest, built in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "httpx>=0.27",
    "scrapling>=0.2",
    "playwright>=1.44",
    "fastapi>=0.111",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"